--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,14 @@ header{
    display: flex; 
   justify-content: center;
    align-items: center; 
-   min-height: 100vh; 
+/*    min-height: 100vh;  */
 background-image: url(/images/image/moon.jpeg);
   background-repeat: no-repeat;
 background-size: cover;
 text-align: center;
 padding-left: 35%;
   padding-top: 15%;
+    margin-bottom:20px;
 }
 
 @media (max-width: 60em){
