--- a/css/styles.css
+++ b/css/styles.css
@@ -6,24 +6,28 @@
 
 
   }
+
+    
 header{
    display: flex; 
   justify-content: center;
    align-items: center; 
-/*    min-height: 100vh;  */
+    width:100%;
+/*     min-height: 100vh;   */
 background-image: url(/images/image/moon.jpeg);
   background-repeat: no-repeat;
 background-size: cover;
 text-align: center;
 padding-left: 35%;
   padding-top: 15%;
-    margin-bottom:20px;
+   
 }
 
 @media (max-width: 60em){
     header{padding-left: 15%;
-            width:100%;
-           padding-top: 28%;}} 
+        
+           padding-top: 28%;
+          padding-left:0px;}} 
 
 .login-box{
   position: relative;
@@ -37,6 +41,7 @@ padding-left: 35%;
    backdrop-filter:blur(18) ; 
    text-align: center; 
    justify-items: center;
+    margin-bottom:20px;
   
 }
  
