--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,9 @@ padding-left: 35%;
 }} 
 @media (max-width: 60em){
     .login-box{
-        width:30%;
+        width:50%;
         height:440px;
+        padding-left:0px
      
     }} 
     
