--- a/css/styles.css
+++ b/css/styles.css
@@ -30,9 +30,10 @@ padding-left: 35%;
 }} 
 @media (max-width: 60em){
     .login-box{
-        width:50%;
+        width:100%;
         height:440px;
-        padding-left:0px
+        padding-left:0px;
+        padding-top:30%
      
     }} 
     
