--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ padding-left: 35%;
 
 @media (max-width: 60em){
     header{
-           width:100%;
-           padding-top: 50%%;
+          padding-left:0px;
+        
 }} 
 
     
