--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ padding-left: 35%;
 
 @media (min-width: 600px){
     header{
-         padding-left: 15%;
-    padding-top: 50%;}} 
+         margin-left: 15%;
+    margin-top: 50%;}} 
 
 @media (max-width: 420px){
     header{
