--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ padding-left: 35%;
 
 @media (min-width: 600px){
     header{
-         margin-left: 15%;
-    margin-top: 50%;}} 
+         padding-left: 9vw;
+    padding-top: 20vw;}} 
 
 @media (max-width: 420px){
     header{
